Created a main Frame for the thumbnails and a div call for the individual profile to go in

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <h2>Customer Directory</h2>
+    </header>
+    <div id="mainFrame">
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+        <div class="customerThumb"></div>
+    </div>
 </body>
 </html>
