Created grid with customer place holders

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <h2>Customer Directory</h2>
     </header>
     <div id="mainFrame">
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
-        <div class="customerThumb"></div>
+        <div class="customerThumb">Customer 1</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
+        <div class="customerThumb">Customer</div>
     </div>
 </body>
 </html>
