added code for js to create img and name elements

--- a/index.html
+++ b/index.html
@@ -13,19 +13,8 @@
     <header>
         <h2>Customer Directory</h2>
     </header>
-    <div id="mainFrame">
-        <div class="customerThumb">Customer 1</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-        <div class="customerThumb">Customer</div>
-    </div>
+    <section id="mainFrame">
+        
+    </section>
 </body>
 </html>
