Effectively called stateAbbv function and have all items displaying appropriately

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Database</title>
     <script src="customers.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <script src="states.js"></script>
     <link href="styles.css" rel="stylesheet">
 </head>
